<resources>
    <string name="app_name">AddressBook</string>
    <string name="title">[My Address Book]</string>
    <string name="name">NAME</string>
    <string name="phone">PHONE</string>
    <string name="email">EMAIL</string>
    <string name="add">ADD</string>
    <string name="del">DEL</string>
    <string name="nothing">Nothing</string>
    <string name="add_msg">You must enter three items.</string>
    <string name="del_msg">Don\'t exist item.</string>
</resources>